--- a/front/src/App.css
+++ b/front/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #2e3031;
+  background-color: #fdfdfd;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
